[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taptaploot-forwarder"
version = "0.1.0"
description = "TapTapLoot X11 Forwarder - Forward keyboard input to TapTapLoot on Wayland via Xwayland"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "TapTapLoot Forwarder Contributors"}
]
keywords = ["taptaploot", "x11", "keyboard", "wayland", "evdev", "xwayland"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

dependencies = [
    "evdev>=1.6.0",
]

[project.scripts]
taptaploot-forwarder = "main:main"

[project.urls]
Repository = "https://gitea.example.com/yourname/TapTapLootForwarder"

[tool.setuptools]
py-modules = ["main"]
